kubernetes/6/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  selector:
    app: deploy-web
  ports:
  - name: web-pot-80
    protocol: TCP
    port: 80
    targetPort: port-nginx
  - name: web-port-8080
    protocol: TCP
    port: 8080
    targetPort: port-multi
