kubernetes/6/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "app.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-web-front
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-web-back
            port:
              number: 80
  - host: "app2.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-web-back
            port:
              number: 80
  - host: "netology.webhop.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-web
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-web
            port:
              number: 8080
